# ass_parser_c

./: .clang-tidy  .gitmodules  meson.build
.github/workflows/: build.yml  lint.yml
src/: main.c  meson.build
src/cli/: main.c  meson.build  thread_helper.h
src/helper/: io.c  io.h  log.c  log.h  macros.h  meson.build  sized_ptr.c  sized_ptr.h  string_view.c  string_view.h  utf8_helper.c  utf8_helper.h  utf8_string_view.c  utf8_string_view.h  utf_helper.c  utf_helper.h
src/lib/: git_version.h.in  lib.c  lib.h  meson.build
src/parser/: helper.c  helper.h  io.c  io.h  meson.build  parser.c  parser.h  sized_ptr.c  sized_ptr.h  warnings.c  warnings.h
src/public/: ass_parser_lib.h  meson.build
src/spec/: links.txt
tests/files/: test.ass
