
lib_src_files += files(
    'io.c',
    'io.h',
    'macros.h',
    'sized_ptr.c',
    'sized_ptr.h',
    'string_view.c',
    'string_view.h',
    'utf_helper.c',
    'utf_helper.h',
)



install_headers(
    files('io.h', 'sized_ptr.h', 'string_view.h', 'utf_helper.h'),
    install_dir: install_include_dir / 'helper',
    preserve_path: true,
)
